[package]
name = "noir_rs"
version.workspace = true
authors = ["Bartosz Nowak https://github.com/Okm165"]
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
acir.workspace = true
acvm.workspace = true
noir_rs_acir_composer.workspace = true
noir_rs_acvm_runtime.workspace = true
noir_rs_barretenberg.workspace = true
noir_rs_blackbox_solver.workspace = true

base64.workspace = true
bincode.workspace = true
flate2.workspace = true
hex.workspace = true
serde.workspace = true
thiserror.workspace = true