[package]
name = "fs"
description = "utilities for reading/writing nargo files"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
noirc_frontend.workspace = true
noirc_abi.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
acir.workspace = true
hex.workspace = true
acvm.workspace = true
nargo.workspace = true
