[package]
name = "noir_profiler"
description = "Profiler for noir circuits"
# x-release-please-start-version
version = "0.40.0"
# x-release-please-end
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "noir_profiler"
path = "src/main.rs"

[dependencies]
color-eyre = "0.6.2"
clap.workspace = true
nargo.workspace = true
const_format.workspace = true
serde.workspace = true
serde_json.workspace = true
fm.workspace = true
codespan-reporting.workspace = true
inferno = "0.11.19"
im.workspace = true
noirc_frontend.workspace = true
acir.workspace = true
noirc_errors.workspace = true

# Logs
tracing-subscriber.workspace = true
tracing-appender = "0.2.3"

[dev-dependencies]
rand = "0.8.5"
proptest = "1.2.0"
paste = "1.0.14"
noirc_abi.workspace = true
noirc_driver.workspace = true
tempfile.workspace = true

[features]
default = ["bn254"]
bn254 = ["noirc_frontend/bn254", "acir/bn254"]
