[package]
name = "noir_rs_acir_composer"
version.workspace = true
authors = ["Bartosz Nowak https://github.com/Okm165"]
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
noir_rs_barretenberg.workspace = true
thiserror.workspace = true
