[package]
name = "noir_rs_acvm_runtime"
version.workspace = true
authors = ["Bartosz Nowak https://github.com/Okm165"]
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
acvm.workspace = true
noir_rs_barretenberg.workspace = true
noir_rs_acir_composer.workspace = true
noir_rs_blackbox_solver.workspace = true
thiserror.workspace = true
