[package]
name = "noir_rs_barretenberg"
version = "0.1.0"
authors = ["Bartosz Nowak https://github.com/Okm165"]
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
base64 = "0.21.4"
flate2 = "1.0.27"
hex = "0.4.3"
reqwest = { version = "0.11.22", features = ["blocking"] }
thiserror = "1.0.49"

[build-dependencies]
bindgen = "0.68.1"
cc = "1.0.83"
cmake = "0.1"
