[package]
name = "noir_rs_barretenberg"
version.workspace = true
authors = ["Bartosz Nowak https://github.com/Okm165"]
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
flate2.workspace = true
reqwest.workspace = true
thiserror.workspace = true

[build-dependencies]
bindgen.workspace = true
cc.workspace = true
cmake.workspace = true
