[package]
name = "noir_rs_blackbox_solver"
version.workspace = true
authors = ["Bartosz Nowak https://github.com/Okm165"]
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
acir.workspace = true
acvm.workspace = true
noir_rs_barretenberg.workspace = true
num-bigint.workspace = true
hex.workspace = true
thiserror.workspace = true
