[package]
name = "poly_check_circuit"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noir_rs = { git = "https://github.com/visoftsolutions/aztec-packages.git", branch = "latest", package = "noir_rs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"